<resources>
    <string name="app_name">NewsViews</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="facebook_app_id">719016035163290</string>
    <string name="fb_login_protocol_scheme">fb719016035163290</string>
    <string name="apiKey">efd9133b7f454bba9a5c32e01583e7f2</string>
    <string name="go_to_home">Go To Home</string>
    <string name="or">OR</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="error">Error!</string>
    <string name="ok">OK</string>
    <string name="about_details">NewsView is an app where different news could be found. One person can
        also search for the news.</string>
    <string name="please_wait">Please wait...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="empty">Empty!</string>
</resources>
