<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.activity.IntroductionActivity">

    <RelativeLayout
        android:id="@+id/layout_introduction"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v4.view.ViewPager>

        <Button
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:visibility="gone"
            android:background="@android:color/transparent"
            android:textColor="@color/colorTransparentWhite"
            android:text="@string/previous" />

        <LinearLayout
            android:id="@+id/layout_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:textColor="@color/colorTransparentWhite"
            android:text="@string/next" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:text="@string/or" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="10dp"
            android:background="#3F51B5"
            android:textColor="@android:color/white"
            android:text="@string/go_to_home" />
    </LinearLayout>

</RelativeLayout>